samples/_failures_safe/1761506522_d58568_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e78609a8.c: In function ‘main’:
./samples/SAFE/__tmp_e78609a8.c:112:12: error: missing terminating " character
  112 |     printf("Enter elements for second matrix (%d
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_e78609a8.c:112:5: error: expected expression at end of input
  112 |     printf("Enter elements for second matrix (%d
      |     ^~~~~~
./samples/SAFE/__tmp_e78609a8.c:112:5: error: expected declaration or statement at end of input
